--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+
 
 .btn-primary{
   @apply text-white rounded-sm bg-gradient-primary;
@@ -16,7 +30,6 @@
   box-sizing: border-box;
   color: #39739d;
   cursor: pointer;
-  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.15385;
@@ -53,4 +66,29 @@ input::placeholder {
   opacity: 1;
   font-size: 12px;
   font-style: italic;
+}
+
+
+/* For Webkit browsers */
+::-webkit-scrollbar {
+  width: 2px; /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* color of the scroll thumb */
+  border-radius: 2px; /* roundness of the scroll thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* color of the scroll thumb on hover */
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: none;
+  scrollbar-color: #888 #f1f1f1;
 }
